--- a/style.css
+++ b/style.css
@@ -10139,15 +10139,15 @@
     }
   }
 
-/* iPad fix - most reliable version */
+/* iPad fix - adjusted width */
 @media screen and (min-width: 768px) and (max-width: 1024px),
        screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   
   body .about .about-content .about-image .photo-container {
     aspect-ratio: unset !important;
-    width: 320px !important;
+    width: 380px !important;
     height: 420px !important;
-    max-width: 320px !important;
+    max-width: 380px !important;
     max-height: 420px !important;
     min-height: 420px !important;
   }
